--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
     "import serial\n",
+    "import time\n",
     "\n",
     "# You will have to change this to whatever COM port the pico is assigned when\n",
     "# you plug it in.\n",
@@ -175,6 +176,97 @@
     "assert abs(ad9959[2]['amp'] - 0.5) < 0.01\n",
     "\n",
     "print('Register Readback Successful')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Single Stepping Table Mode\n",
+    "\n",
+    "Program a 2000 step table that single steps from 10 MHz to 100 MHz over the corse of 2 seconds.\n",
+    "The resulting sweep can easily be seen with a spectrum analyzer. \n",
+    "It is then automatically executed and checks that all 2000 triggers were processed successfully."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Programmed, Executing\n",
+      "Table Executed successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "startPoint = 10 * MHZ\n",
+    "endPoint = 100 * MHZ\n",
+    "totalTime = 2 # sec\n",
+    "\n",
+    "spacing = 1000 * 10**(-6) # us\n",
+    "steps = round(totalTime / spacing)\n",
+    "delta = (endPoint - startPoint) / steps\n",
+    "\n",
+    "send('debug off')\n",
+    "send('mode 0 1')\n",
+    "send('setchannels 1')\n",
+    "\n",
+    "for i in range(steps):\n",
+    "    send(f'set 0 {i} {startPoint + delta * i} 1 0 {spacing * 10**9 / 8}', echo=False)\n",
+    "\n",
+    "assert send(f'set 4 {i + 1}') == \"ok\\r\\n\"\n",
+    "print(\"Table Programmed, Executing\")\n",
+    "assert send('start') == 'ok\\r\\n', 'Buffered Execution did not start correctly'\n",
+    "time.sleep(totalTime)\n",
+    "assert send('numtriggers') == '2000\\r\\n', 'Wrong number of triggers processed'\n",
+    "print('Table Executed successfully')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Non-Volatile Storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table run from non-volatile memory successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "send('save')\n",
+    "\n",
+    "# # destory current table\n",
+    "time.sleep(2)\n",
+    "for i in range(steps):\n",
+    "    send(f'set 0 {i} 0 0 0 0', echo=False)\n",
+    "\n",
+    "# load and run table\n",
+    "send('load')\n",
+    "time.sleep(1)\n",
+    "send('mode 0 1')\n",
+    "send('setchannels 1')\n",
+    "send('start')\n",
+    "\n",
+    "time.sleep(2)\n",
+    "assert send('numtriggers') == '2000\\r\\n', 'Something went wrong'\n",
+    "print('Table run from non-volatile memory successfully')\n"
    ]
   }
  ],
