--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +76,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'pll_mult': 4,\n",
-       " 0: {'freq': 99999999.97671694, 'phase': 0.0, 'amp': 1},\n",
-       " 1: {'freq': 0.0, 'phase': 270.0, 'amp': 1},\n",
-       " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 0.5004887585532747},\n",
+       " 0: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
+       " 1: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
+       " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +177,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +216,8 @@
     "\n",
     "for i in range(steps):\n",
     "    send(f'set 0 {i} {startPoint + delta * i} 1 0 {spacing * 10**9 / 8}', echo=False)\n",
-    "\n",
     "assert send(f'set 4 {i + 1}') == \"ok\\r\\n\"\n",
+    "\n",
     "print(\"Table Programmed, Executing\")\n",
     "assert send('start') == 'ok\\r\\n', 'Buffered Execution did not start correctly'\n",
     "time.sleep(totalTime)\n",
@@ -229,16 +226,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Non-Volatile Storage"
+    "### Test Non-Volatile Storage\n",
+    "Run this test after the previous one to test storing and retrieving table instructions in non-volatile memory that will survive a power cycle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,11 +265,277 @@
     "assert send('numtriggers') == '2000\\r\\n', 'Something went wrong'\n",
     "print('Table run from non-volatile memory successfully')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Amplitude Sweep\n",
+    "\n",
+    "### Pico Start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "send('debug off')\n",
+    "send(\"\"\"mode 1 1\n",
+    "setchannels 1\n",
+    "setfreq 0 100000000\n",
+    "setfreq 1 100000000\n",
+    "setfreq 2 100000000\n",
+    "setfreq 3 100000000\n",
+    "set 0 0 1.0 0.0 0.001 1 2000\n",
+    "set 0 1 0.0 0.5 0.001 1 2000\n",
+    "set 0 2 0.5 1.0 0.001 1 2000\n",
+    "set 0 3 1.0 0.0 0.001 1 2000\n",
+    "set 0 4 0.0 1.0 0.001 1 2000\n",
+    "set 0 5 1.0 0.5 0.001 1 2000\n",
+    "set 0 6 0.5 0.0 0.001 1 2000\n",
+    "set 0 7 0.0 1.0 0.001 1 2000\n",
+    "set 4 8\n",
+    "start\n",
+    "\"\"\")\n",
+    "\n",
+    "# send('numtriggers')\n",
+    "# assert send('numtriggers') == '8\\r\\n'\n",
+    "# print('Success')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HWStart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "send('debug off')\n",
+    "send(\"\"\"abort\n",
+    "mode 1 1\n",
+    "setchannels 1\n",
+    "setfreq 0 100000000\n",
+    "setfreq 1 100000000\n",
+    "setfreq 2 100000000\n",
+    "setfreq 3 100000000\n",
+    "set 0 0 1.0 0.0 0.001 1 2000\n",
+    "set 0 1 0.0 0.5 0.001 1 2000\n",
+    "set 0 2 0.5 1.0 0.001 1 2000\n",
+    "set 0 3 1.0 0.0 0.001 1 2000\n",
+    "set 0 4 0.0 1.0 0.001 1 2000\n",
+    "set 0 5 1.0 0.5 0.001 1 2000\n",
+    "set 0 6 0.5 0.0 0.001 1 2000\n",
+    "set 0 7 0.0 1.0 0.001 1 2000\n",
+    "set 4 8\n",
+    "hwstart\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This produces the following scope trace:  \n",
+    "![amplitudetest](../img/amp-test.png)  \n",
+    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
+    "$D_0$ is the external trigger line into the pico.  \n",
+    "The yellow trace is any of the 4 channel outputs from the AD9959"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequency Sweep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "f53 = 53000000\n",
+    "f56 = 56000000\n",
+    "f59 = 59000000\n",
+    "\n",
+    "d = 2000\n",
+    "t = 3000\n",
+    "\n",
+    "send(\n",
+    "f\"\"\"abort\n",
+    "mode 2 1\n",
+    "setchannels 1\n",
+    "set 0 0 {f53} {f59} {d} 1 {t}\n",
+    "set 0 1 {f59} {f56} {d} 1 {t}\n",
+    "set 0 2 {f56} {f53} {d} 1 {t}\n",
+    "set 0 3 {f53} {f56} {d} 1 {t}\n",
+    "set 0 4 {f56} {f59} {d} 1 {t}\n",
+    "set 0 5 {f59} {f53} {d} 1 {t}\n",
+    "set 4 6\n",
+    "start\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "assert send('numtriggers') == '6\\r\\n'\n",
+    "print('Success')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "send(\n",
+    "f\"\"\"abort\n",
+    "mode 2 1\n",
+    "setchannels 1\n",
+    "set 0 0 {f53} {f59} {d} 1 {t}\n",
+    "set 0 1 {f59} {f56} {d} 1 {t}\n",
+    "set 0 2 {f56} {f53} {d} 1 {t}\n",
+    "set 0 3 {f53} {f56} {d} 1 {t}\n",
+    "set 0 4 {f56} {f59} {d} 1 {t}\n",
+    "set 0 5 {f59} {f53} {d} 1 {t}\n",
+    "set 4 6\n",
+    "hwstart\n",
+    "\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Triggering of the hardware trigger line generates the following scope trace:  \n",
+    "![Frequency Sweep](../img/freq-test.png)  \n",
+    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
+    "$D_0$ is the external trigger line into the pico.  \n",
+    "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
+    "The green trace is the output from an interferometer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phase Sweep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 2000\n",
+    "d = 0.2\n",
+    "\n",
+    "send(f\"\"\"abort\n",
+    "debug off\n",
+    "setfreq 0 100000000\n",
+    "setfreq 1 100000000\n",
+    "setfreq 2 100000000\n",
+    "setfreq 3 100000000\n",
+    "setphase 0 0\n",
+    "setphase 1 0\n",
+    "setphase 2 0\n",
+    "setphase 3 0\n",
+    "mode 3 1\n",
+    "setchannels 2\n",
+    "set 0 0 0 0 0 0 {t}\n",
+    "set 0 1 0 0 0 0 {t}\n",
+    "set 0 2 0 0 0 0 {t}\n",
+    "set 0 3 0 0 0 0 {t}\n",
+    "set 0 4 0 0 0 0 {t}\n",
+    "set 0 5 0 0 0 0 {t}\n",
+    "set 1 0 0 180 {d} 1 {t}\n",
+    "set 1 1 180 90 {d} 1 {t}\n",
+    "set 1 2 90 0 {d} 1 {t}\n",
+    "set 1 3 0 90 {d} 1 {t}\n",
+    "set 1 4 90 180 {d} 1 {t}\n",
+    "set 1 5 180 0 {d} 1 {t}\n",
+    "set 4 6\n",
+    "start\n",
+    "\"\"\")\n",
+    "\n",
+    "assert send('numtriggers') == '6\\r\\n'\n",
+    "print('Success')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This produces the following scope trace:  \n",
+    "![amplitudetest](../img/phase-test.png)  \n",
+    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
+    "$D_0$ is the external trigger line into the pico.  \n",
+    "The yellow trace is channel 1 from the AD9959  \n",
+    "The green trace is the output from a phase frequency detector reading the AD9959 channel 0 and 1 outputs"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -286,9 +549,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.15"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e03806b84a2716c492803880915f283f11b8db3da799c7b12cf408e41369bfae"
@@ -296,5 +558,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
