cleaned up tests

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,9 +311,8 @@
     "start\n",
     "\"\"\")\n",
     "\n",
-    "# send('numtriggers')\n",
-    "# assert send('numtriggers') == '8\\r\\n'\n",
-    "# print('Success')"
+    "assert send('numtriggers') == '8\\r\\n'\n",
+    "print('Success')"
    ]
   },
   {
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +333,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +429,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
