--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -520,6 +520,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -528,7 +529,7 @@
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is channel 1 from the AD9959  \n",
-    "The green trace is the output from a phase frequency detector reading the AD9959 channel 0 and 1 outputs"
+    "The pink trace is the output of a phase frequency detector between channels 0 and 1 of the AD9959"
    ]
   }
  ],
@@ -548,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
