--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -361,11 +361,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "This produces the following scope trace:  \n",
-    "![amplitudetest](../img/amp-test.png)  \n",
+    "![amplitudetest](amp-test.png)  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959"
@@ -452,11 +453,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Triggering of the hardware trigger line generates the following scope trace:  \n",
-    "![Frequency Sweep](../img/freq-test.png)  \n",
+    "![Frequency Sweep](freq-test.png)  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
@@ -525,7 +527,7 @@
    "metadata": {},
    "source": [
     "This produces the following scope trace:  \n",
-    "![amplitudetest](../img/phase-test.png)  \n",
+    "![amplitudetest](phase-test.png)  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is channel 1 from the AD9959  \n",
