use img tags for images in notebook

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -366,7 +366,7 @@
    "metadata": {},
    "source": [
     "This produces the following scope trace:  \n",
-    "![amplitudetest](amp-test.png)  \n",
+    "<img src=\"amp-test.png\">\n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959"
@@ -458,7 +458,7 @@
    "metadata": {},
    "source": [
     "Triggering of the hardware trigger line generates the following scope trace:  \n",
-    "![Frequency Sweep](freq-test.png)  \n",
+    "<img src=\"../img/freq-test.png\">\n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
@@ -526,8 +526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This produces the following scope trace:  \n",
-    "![amplitudetest](phase-test.png)  \n",
+    "This produces the following scope trace:    \n",
+    "<img src=\"../img/phase-test.png\">\n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is channel 1 from the AD9959  \n",
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
