add image alt text

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -458,7 +458,7 @@
    "metadata": {},
    "source": [
     "Triggering of the hardware trigger line generates the following scope trace:  \n",
-    "<img src=\"freq-test.png\">  \n",
+    "<img src=\"freq-test.png\" alt=\"Frequency Sweep Example on oscilloscope\">  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
