add image alt text

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -366,7 +366,7 @@
    "metadata": {},
    "source": [
     "This produces the following scope trace:  \n",
-    "<img src=\"../img/amp-test.png\">  \n",
+    "<img src=\"amp-test.png\" alt=\"Amplitude Sweep Test on Oscilloscope\">  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is any of the 4 channel outputs from the AD9959"
@@ -527,7 +527,7 @@
    "metadata": {},
    "source": [
     "This produces the following scope trace:    \n",
-    "<img src=\"phase-test.png\">  \n",
+    "<img src=\"phase-test.png\" alt=\"Phase Sweep Test on Oscilloscope\">  \n",
     "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
     "$D_0$ is the external trigger line into the pico.  \n",
     "The yellow trace is channel 1 from the AD9959  \n",
