fixed version mismatch and added type hints/comments

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -25,8 +25,11 @@
    "outputs": [],
    "source": [
     "# helper for sending serial commands\n",
-    "# expects a string\n",
-    "def send(command, echo = True):\n",
+    "# expects a string with the command\n",
+    "# if echo is set to false, that means not to worry about the response from the\n",
+    "# pico it signifigantly reduces communication time when sending many\n",
+    "# instructions, but you lose out on the debugging info from the pico\n",
+    "def send(command: str, echo = True) -> str:\n",
     "    # pico is expecting a newline to end every command\n",
     "    if command[-1] != '\\n':\n",
     "        command += '\\n'\n",
@@ -71,7 +74,7 @@
    "source": [
     "assert send('reset')    == 'ok\\r\\n'\n",
     "assert send('status')   == '0\\r\\n'\n",
-    "assert send('version')  == '0.0.0\\r\\n'\n",
+    "assert send('version')  == '0.1.1\\r\\n'\n",
     "print('Serial Communication Successful')"
    ]
   },
@@ -104,7 +107,7 @@
    ],
    "source": [
     "# Helper for reading register values and putting them in a dictionary\n",
-    "def readregs(ref_clk = 125 * MHZ):\n",
+    "def readregs(ref_clk = 125 * MHZ) -> dict:\n",
     "    ad9959 = {}\n",
     "    regs = send('readregs')\n",
     "    regs = regs.split('\\r\\n')\n",
@@ -281,14 +284,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
     }
    ],
    "source": [
