updated sawishtooth script

--- a/testing/RSI-paper.ipynb
+++ b/testing/RSI-paper.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 60,
    "id": "93e4f43d-43da-403e-aaff-6bb0a0643320",
    "metadata": {},
    "outputs": [
@@ -213,21 +213,17 @@
       "ok\n",
       "set freq: 81744999.974035\n",
       "ok\n",
+      "Amp:     0.500489\n",
+      "ok\n",
+      "Amp:     0.500489\n",
+      "ok\n",
+      "Amp:     0.500489\n",
+      "ok\n",
+      "Amp:     0.500489\n",
+      "ok\n",
       "ok\n",
       "ok\n",
       "\n",
-      "1.0\n",
-      "2.0\n",
-      "6.0\n",
-      "0.5000000000000001\n",
-      "1.0000000000000002\n",
-      "3.0\n",
-      "5.0\n",
-      "10.0\n",
-      "30.0\n",
-      "50.0\n",
-      "100.0\n",
-      "300.0\n",
       "Ready\n"
      ]
     }
@@ -248,6 +244,10 @@
     "setfreq 1 {startPoint}\n",
     "setfreq 2 {startPoint}\n",
     "setfreq 3 {startPoint}\n",
+    "setamp 0 0.5\n",
+    "setamp 1 0.5\n",
+    "setamp 2 0.5\n",
+    "setamp 3 0.5\n",
     "mode 2 1\n",
     "setchannels 1\n",
     "\"\"\"))\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 66,
    "id": "a595c333-0020-42b2-a0f6-84bc51e78a53",
    "metadata": {},
    "outputs": [
@@ -283,13 +283,63 @@
        "'ok\\r\\n'"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "send('start')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "10c0558c-e0c0-4ba2-821e-eb9fb71d5755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nAmp:     0.500489\\r\\nok\\r\\nAmp:     0.500489\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "send(\"\"\"mode 1 0\n",
+    "setamp 0 0.5\n",
+    "setamp 1 0.5\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "361663f4-6dd5-42af-8d50-0c9746198c90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nok\\r\\nSet ins #0 for channel 0 from 50000000.046566 Hz to 150000000.023283 Hz with delta 200.001523 Hz and rate of 255\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "send(f\"\"\"abort\n",
+    "mode 2 1\n",
+    "set 0 0 {50* MHZ} {150 * MHZ} 200 255 1000\n",
+    "set 4 1\n",
+    "start\n",
+    "\"\"\")"
    ]
   }
  ],
