added test case to readme

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# helper for sending serial commands\n",
-    "# expects a string with the command\n",
+    "# expects a string with the command (they dont have to be escaped with \\r or \\n at the end)\n",
     "# if echo is set to false, that means not to worry about the response from the\n",
     "# pico it signifigantly reduces communication time when sending many\n",
     "# instructions, but you lose out on the debugging info from the pico\n",
@@ -35,6 +35,7 @@
     "        command += '\\n'\n",
     "\n",
     "    resp = ''\n",
+    "    conn = None\n",
     "    try:\n",
     "        conn = serial.Serial(PICO_PORT, baudrate = 152000, timeout = 0.1)\n",
     "        conn.write(command.encode())\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -87,41 +88,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pll_mult': 4,\n",
+       "{'pll_mult': 0,\n",
        " 0: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 1: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Helper for reading register values and putting them in a dictionary\n",
+    "# takes in the frequency of the reference clock, assuming default of 125 MHz\n",
     "def readregs(ref_clk = 125 * MHZ) -> dict:\n",
     "    ad9959 = {}\n",
+    "\n",
     "    regs = send('readregs')\n",
     "    regs = regs.split('\\r\\n')\n",
-    "\n",
+    "    # strip out register labels\n",
     "    regs = [''.join(r.split()[1:]) for r in regs]\n",
     "\n",
+    "    # convert from hex to decimal\n",
     "    for i, reg in enumerate(regs):\n",
     "        try:\n",
     "            regs[i] = int(reg, 16)\n",
     "        except ValueError:\n",
     "            pass\n",
     "\n",
+    "    # mask and shift to pull out PLL Multiplier from fr1\n",
     "    ad9959['pll_mult'] = (regs[1] & 0x7c0000) >> 18\n",
     "\n",
+    "    # will need system clock to find the frequencies from the tuning words\n",
     "    sys_clk = ref_clk * ad9959['pll_mult']\n",
     "\n",
     "    for i in range(4):\n",
@@ -147,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +230,7 @@
     "print(\"Table Programmed, Executing\")\n",
     "assert send('start') == 'ok\\r\\n', 'Buffered Execution did not start correctly'\n",
     "time.sleep(totalTime)\n",
-    "assert send('numtriggers') == '2000\\r\\n', 'Wrong number of triggers processed'\n",
+    "assert send('numtriggers') == f'{steps}\\r\\n', 'Wrong number of triggers processed'\n",
     "print('Table Executed successfully')\n"
    ]
   },
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +339,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -393,9 +399,9 @@
     }
    ],
    "source": [
-    "f53 = 53000000\n",
-    "f56 = 56000000\n",
-    "f59 = 59000000\n",
+    "f112 = 112e6\n",
+    "f115 = 115e6\n",
+    "f118 = 118e6\n",
     "\n",
     "d = 2000\n",
     "t = 3000\n",
@@ -404,24 +410,45 @@
     "f\"\"\"abort\n",
     "mode 2 1\n",
     "setchannels 1\n",
-    "set 0 0 {f53} {f59} {d} 1 {t}\n",
-    "set 0 1 {f59} {f56} {d} 1 {t}\n",
-    "set 0 2 {f56} {f53} {d} 1 {t}\n",
-    "set 0 3 {f53} {f56} {d} 1 {t}\n",
-    "set 0 4 {f56} {f59} {d} 1 {t}\n",
-    "set 0 5 {f59} {f53} {d} 1 {t}\n",
-    "set 4 6\n",
+    "set 0 0 {f112} {f118} {d}   1 {t}\n",
+    "set 0 1 {f118} {f115} {d/4} 1 {t*2}\n",
+    "set 0 2 {f115} {f112} {d}   1 {t/2}\n",
+    "set 0 3 {f112} {f112} {0}   1 {t}\n",
+    "set 0 4 {f115} {f115} {0}   1 {t}\n",
+    "set 0 5 {f118} {f118} {0}   1 {t}\n",
+    "set 0 6 {f118} {f112} {d}   1 {t}\n",
+    "set 0 7 {f112} {f115} {d/4} 1 {t*2}\n",
+    "set 0 8 {f115} {f118} {d}   1 {t*10}\n",
+    "set 0 9 {f112} {f112}  0    1 1\n",
+    "set 4 10\n",
     "start\n",
     "\"\"\"\n",
     ")\n",
     "\n",
-    "assert send('numtriggers') == '6\\r\\n'\n",
+    "assert send('numtriggers') == '10\\r\\n'\n",
     "print('Success')"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Produces the following scope trace:  \n",
+    "<img src=\"freq-test.png\" alt=\"Frequency Sweep Example on oscilloscope\">  \n",
+    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
+    "$D_0$ is the external trigger line into the pico.  \n",
+    "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
+    "The green trace is the output from an interferometer\n",
+    "\n",
+    "\n",
+    "\n",
+    "The following code is for the same trace, but with an external trigger:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +457,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,31 +465,18 @@
    "source": [
     "send(\n",
     "f\"\"\"abort\n",
-    "mode 2 1\n",
+    "mode 2 0\n",
     "setchannels 1\n",
-    "set 0 0 {f53} {f59} {d} 1 {t}\n",
-    "set 0 1 {f59} {f56} {d} 1 {t}\n",
-    "set 0 2 {f56} {f53} {d} 1 {t}\n",
-    "set 0 3 {f53} {f56} {d} 1 {t}\n",
-    "set 0 4 {f56} {f59} {d} 1 {t}\n",
-    "set 0 5 {f59} {f53} {d} 1 {t}\n",
-    "set 4 6\n",
+    "set 0 0 {f112} {f118} {d} 1 {t}\n",
+    "set 0 1 {f118} {f115} {d} 1 {t}\n",
+    "set 0 2 {f115} {f112} {d} 1 {t}\n",
+    "set 0 3 {f112} {f115} {d} 1 {t}\n",
+    "set 0 4 {f115} {f118} {d} 1 {t}\n",
+    "set 0 5 {f118} {f112} {d} 1 {t}\n",
+    "set 5 6\n",
     "hwstart\n",
     "\"\"\"\n",
     ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Triggering of the hardware trigger line generates the following scope trace:  \n",
-    "<img src=\"freq-test.png\" alt=\"Frequency Sweep Example on oscilloscope\">  \n",
-    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
-    "$D_0$ is the external trigger line into the pico.  \n",
-    "The yellow trace is any of the 4 channel outputs from the AD9959  \n",
-    "The green trace is the output from an interferometer"
    ]
   },
   {
@@ -474,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -533,6 +547,61 @@
     "The yellow trace is channel 1 from the AD9959  \n",
     "The pink trace is the output of a phase frequency detector between channels 0 and 1 of the AD9959"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequency Sweep 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\r\\nok\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f112 = 112e6\n",
+    "f115 = 115e6\n",
+    "f118 = 118e6\n",
+    "\n",
+    "d = 2000\n",
+    "t = 3000\n",
+    "\n",
+    "send(\n",
+    "f\"\"\"abort\n",
+    "mode 5 1\n",
+    "setchannels 1\n",
+    "set 0 0 {f112} {f118} {d}   1 {t}\n",
+    "set 0 1 {f118} {f115} {d/4} 1 {t*2}\n",
+    "set 0 2 {f115} {f112} {d}   1 {t/2}\n",
+    "set 0 3 {f112} {f112} {0}   1 {t}\n",
+    "set 0 4 {f115} {f115} {0}   1 {t}\n",
+    "set 0 5 {f118} {f118} {0}   1 {t}\n",
+    "set 0 6 {f118} {f112} {d}   1 {t}\n",
+    "set 0 7 {f112} {f115} {d/4} 1 {t*2}\n",
+    "set 0 8 {f115} {f118} {d}   1 {t*10}\n",
+    "set 0 9 {f112} {f112}  0    1 1\n",
+    "set 4 10\n",
+    "start\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "# assert send('numtriggers') == '6\\r\\n'\n",
+    "# print('Success')"
+   ]
   }
  ],
  "metadata": {
@@ -551,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
