--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -88,20 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'pll_mult': 0,\n",
+       "{'pll_mult': 4,\n",
        " 0: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 1: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
        " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "'ok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -553,23 +553,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frequency Sweep 2"
+    "## Frequency Sweep and Single Step Other Params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ok\\r\\nok\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nMissing Argument - expected: set <channel:int> <addr:int> <start_point:double> <end_point:double> <delta:double> <rate:int> <other1> <other2> (<time:int>)\\r\\nok\\r\\nok\\r\\nok\\r\\n'"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
     }
    ],
    "source": [
@@ -583,24 +580,48 @@
     "send(\n",
     "f\"\"\"abort\n",
     "mode 5 1\n",
-    "setchannels 1\n",
-    "set 0 0 {f112} {f118} {d}   1 {t}\n",
-    "set 0 1 {f118} {f115} {d/4} 1 {t*2}\n",
-    "set 0 2 {f115} {f112} {d}   1 {t/2}\n",
-    "set 0 3 {f112} {f112} {0}   1 {t}\n",
-    "set 0 4 {f115} {f115} {0}   1 {t}\n",
-    "set 0 5 {f118} {f118} {0}   1 {t}\n",
-    "set 0 6 {f118} {f112} {d}   1 {t}\n",
-    "set 0 7 {f112} {f115} {d/4} 1 {t*2}\n",
-    "set 0 8 {f115} {f118} {d}   1 {t*10}\n",
-    "set 0 9 {f112} {f112}  0    1 1\n",
+    "setchannels 2\n",
+    "set 0 0 {f112} {f118} {d}   1 1 0 {t}\n",
+    "set 0 1 {f118} {f115} {d/4} 1 1 0 {t*2}\n",
+    "set 0 2 {f115} {f112} {d}   1 1 0 {t/2}\n",
+    "set 0 3 {f112} {f112} {0}   1 1 0 {t}\n",
+    "set 0 4 {f115} {f115} {0}   1 1 0 {t}\n",
+    "set 0 5 {f118} {f118} {0}   1 1 0 {t}\n",
+    "set 0 6 {f118} {f112} {d}   1 1 0 {t}\n",
+    "set 0 7 {f112} {f115} {d/4} 1 1 0 {t*2}\n",
+    "set 0 8 {f115} {f118} {d}   1 1 0 {t*10}\n",
+    "set 0 9 {f112} {f112}  0    1 1 0 1\n",
+    "set 1 0 {f112} {f118} {d}   1 0.75 90 {t}\n",
+    "set 1 1 {f118} {f115} {d/4} 1 0.5  180 {t*2}\n",
+    "set 1 2 {f115} {f112} {d}   1 0.9  90 {t/2}\n",
+    "set 1 3 {f112} {f112} {0}   1 1.0  00 {t}\n",
+    "set 1 4 {f115} {f115} {0}   1 0.9  90 {t}\n",
+    "set 1 5 {f118} {f118} {0}   1 0.8  180 {t}\n",
+    "set 1 6 {f118} {f112} {d}   1 0.9  90 {t}\n",
+    "set 1 7 {f112} {f115} {d/4} 1 1.0  00 {t*2}\n",
+    "set 1 8 {f115} {f118} {d}   1 0.9  90 {t*10}\n",
+    "set 1 9 {f112} {f112}  0    1 1.0  90 1\n",
     "set 4 10\n",
     "start\n",
     "\"\"\"\n",
     ")\n",
     "\n",
-    "# assert send('numtriggers') == '6\\r\\n'\n",
-    "# print('Success')"
+    "assert send('numtriggers') == '10\\r\\n'\n",
+    "print('Success')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This produces the following scope trace:    \n",
+    "<img src=\"all_sweep.png\" alt=\"Phase Sweep Test on Oscilloscope\">  \n",
+    "$D_1$ is the IO_UPDATE line between the pico and the AD9959.  \n",
+    "$D_0$ is the external trigger line into the pico.  \n",
+    "The yellow trace is channel 1 from the AD9959  \n",
+    "The pink trace is the output of a phase frequency detector between channels 0 and 1 of the AD9959\n",
+    "The green trace is the interferometer"
    ]
   }
  ],
