--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -13,7 +13,7 @@
     "# you plug it in.\n",
     "# On Windows you can open device manager and look at the 'Ports (COM & LPT)' dropdown\n",
     "# the pico will show up as 'USB Serial Device'\n",
-    "PICO_PORT = 'COM5'\n",
+    "PICO_PORT = 'COM7'\n",
     "\n",
     "MHZ = 1000000"
    ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -73,9 +73,9 @@
     }
    ],
    "source": [
-    "assert send('reset')    == 'ok\\r\\n'\n",
-    "assert send('status')   == '0\\r\\n'\n",
-    "assert send('version')  == '0.1.1\\r\\n'\n",
+    "assert send('reset')    == 'ok\\n'\n",
+    "assert send('status')   == '0\\n'\n",
+    "assert send('version')  == '0.1.1\\n'\n",
     "print('Serial Communication Successful')"
    ]
   },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
     "    ad9959 = {}\n",
     "\n",
     "    regs = send('readregs')\n",
-    "    regs = regs.split('\\r\\n')\n",
+    "    regs = regs.split('\\n')\n",
     "    # strip out register labels\n",
     "    regs = [''.join(r.split()[1:]) for r in regs]\n",
     "\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "assert send('reset') == 'ok\\r\\n', 'Could not run \"reset\" command'\n",
+    "assert send('reset') == 'ok\\n', 'Could not run \"reset\" command'\n",
     "ad9959 = readregs()\n",
     "for i in range(4):\n",
     "    assert ad9959[i]['freq'] == 0\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -225,12 +225,12 @@
     "\n",
     "for i in range(steps):\n",
     "    send(f'set 0 {i} {startPoint + delta * i} 1 0 {spacing * 10**9 / 8}', echo=False)\n",
-    "assert send(f'set 4 {i + 1}') == \"ok\\r\\n\"\n",
+    "assert send(f'set 4 {i + 1}') == \"ok\\n\"\n",
     "\n",
     "print(\"Table Programmed, Executing\")\n",
-    "assert send('start') == 'ok\\r\\n', 'Buffered Execution did not start correctly'\n",
+    "assert send('start') == 'ok\\n', 'Buffered Execution did not start correctly'\n",
     "time.sleep(totalTime)\n",
-    "assert send('numtriggers') == f'{steps}\\r\\n', 'Wrong number of triggers processed'\n",
+    "assert send('numtriggers') == f'{steps}\\n', 'Wrong number of triggers processed'\n",
     "print('Table Executed successfully')\n"
    ]
   },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
     "send('start')\n",
     "\n",
     "time.sleep(2)\n",
-    "assert send('numtriggers') == '2000\\r\\n', 'Something went wrong'\n",
+    "assert send('numtriggers') == '2000\\n', 'Something went wrong'\n",
     "print('Table run from non-volatile memory successfully')\n"
    ]
   },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
     "start\n",
     "\"\"\")\n",
     "\n",
-    "assert send('numtriggers') == '8\\r\\n'\n",
+    "assert send('numtriggers') == '8\\n'\n",
     "print('Success')"
    ]
   },
@@ -425,7 +425,7 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "assert send('numtriggers') == '10\\r\\n'\n",
+    "assert send('numtriggers') == '10\\n'\n",
     "print('Success')"
    ]
   },
@@ -531,7 +531,7 @@
     "start\n",
     "\"\"\")\n",
     "\n",
-    "assert send('numtriggers') == '6\\r\\n'\n",
+    "assert send('numtriggers') == '6\\n'\n",
     "print('Success')"
    ]
   },
@@ -606,7 +606,7 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "assert send('numtriggers') == '10\\r\\n'\n",
+    "assert send('numtriggers') == '10\\n'\n",
     "print('Success')"
    ]
   },
@@ -627,9 +627,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pico",
    "language": "python",
-   "name": "python3"
+   "name": "pico"
   },
   "language_info": {
    "codemirror_mode": {
@@ -641,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.1"
   },
   "vscode": {
    "interpreter": {
