--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,17 +211,29 @@
     "        self.write = self.dev.write\n",
     "        self.query = self.dev.query\n",
     "\n",
+    "    def _get_screenshot(self, verbose=False):\n",
+    "        if verbose:\n",
+    "            print('Acquiring screen image...')\n",
+    "        return(self.dev.query_binary_values(':DISPlay:DATA? PNG, COLor', datatype='s'))\n",
+    "\n",
     "    def save_screenshot(self, filepath, verbose=False):\n",
     "        if verbose:\n",
     "            print('Saving screen image...')\n",
-    "        result = self.dev.query_binary_values(':DISPlay:DATA? PNG, COLor', datatype='s')\n",
+    "        result = self._get_screenshot()\n",
     "        with open(f'{filepath}', 'wb+') as ofile:\n",
     "            ofile.write(bytes(result))\n",
     "\n",
+    "    def set_time_delay(self, time):\n",
+    "        self.write(f':TIMebase:DELay {time}')\n",
+    "\n",
+    "    def set_time_scale(self, time):\n",
+    "        self.write(f':TIMebase:SCALe {time}')\n",
+    "\n",
     "my_instrument = KeysightScope()\n",
     "\n",
+    "\n",
     "if SAVE_IMAGES == True:\n",
-    "    my_instrument.save_screenshot('startup.png')"
+    "    my_instrument.save_screenshot('startup.png')\n"
    ]
   },
   {
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +380,7 @@
        "30"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,11 +396,11 @@
     "my_instrument.write(':ChANnel2:SCALe +1.00E+00')\n",
     "my_instrument.write(':ChANnel2:OFFSet 275E-03')\n",
     "\n",
-    "my_instrument.write(\":CHANnel3:DISPlay 0\")\n",
+    "my_instrument.write(\":CHANnel3:DISPlay 1\")\n",
     "my_instrument.write(':ChANnel3:SCALe +1.00E+00')\n",
     "my_instrument.write(':ChANnel3:OFFSet +2.0E+00')\n",
     "\n",
-    "my_instrument.write(\":CHANnel4:DISPlay 0\")\n",
+    "my_instrument.write(\":CHANnel4:DISPlay 1\")\n",
     "my_instrument.write(':ChANnel4:SCALe +1.00E+00')\n",
     "my_instrument.write(':ChANnel4:OFFSet +2.0E+00')\n",
     "\n",
@@ -415,7 +427,7 @@
     {
      "data": {
       "text/plain": [
-       "60"
+       "21"
       ]
      },
      "execution_count": 11,
@@ -424,7 +436,11 @@
     }
    ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0: Single Stepping\"')\n"
+    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0: Single Stepping\"')\n",
+    "send('reset')\n",
+    "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
+    "my_instrument.write(':TIMebase:SCALe 10.0E-09')\n",
+    "my_instrument.write(\":CHANnel2:DISPlay 0\")"
    ]
   },
   {
@@ -540,6 +556,9 @@
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 1\"')\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
+    "my_instrument.write(\":CHANnel2:DISPlay 1\")\n",
+    "my_instrument.write(\":TRIGger:EDGE:SOURce CHANnel2\")\n",
+    "\n",
     "send('reset')"
    ]
   },
@@ -764,16 +783,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26"
+       "'ok\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,12 +800,13 @@
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 3: Phase Sweep\"')\n",
     "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
-    "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n"
+    "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
+    "send('reset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +886,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -892,9 +912,7 @@
     }
    ],
    "source": [
-    "f1 = 112e6\n",
-    "f2 = 100e6\n",
-    "f3 = 118e6\n",
+    "f2 = 125 * MHZ\n",
     "\n",
     "d = 0.001\n",
     "t = 2000\n",
@@ -915,16 +933,16 @@
     "set 0 7 0.0 1.0 {d * 1} 1 {f2} 0 {t}\n",
     "set 0 8 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
     "set 0 9 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 0 0.2 0.3 {d * 1} 1 {f2} 0 {t}\n",
-    "# set 1 1 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 2 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 3 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 4 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 5 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 6 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 7 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 8 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
-    "# set 1 9 1.0 1.0 {d * 0} 1 {f2} 0 {t}\n",
+    "# set 1 0 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 1 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 2 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 3 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 4 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 5 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 6 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 7 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 8 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
+    "# set 1 9 1.0 1.0 {d * 0} 1 {f2} 90 {t}\n",
     "set 4 10\n",
     "start\n",
     "\"\"\"\n",
@@ -1047,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1074,7 @@
        "26"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
