cleanup of some tests / removing some fruitless commented out tests

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "26"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -979,12 +979,12 @@
     "f\"\"\"abort\n",
     "mode 2 0\n",
     "setchannels 1\n",
-    "set 0 0 {f112} {f118} {d} 1 {t}\n",
-    "set 0 1 {f118} {f115} {d} 1 {t}\n",
-    "set 0 2 {f115} {f112} {d} 1 {t}\n",
-    "set 0 3 {f112} {f115} {d} 1 {t}\n",
-    "set 0 4 {f115} {f118} {d} 1 {t}\n",
-    "set 0 5 {f118} {f112} {d} 1 {t}\n",
+    "set 0 0 {f1} {f3} {d} 1 {t}\n",
+    "set 0 1 {f3} {f2} {d} 1 {t}\n",
+    "set 0 2 {f2} {f1} {d} 1 {t}\n",
+    "set 0 3 {f1} {f2} {d} 1 {t}\n",
+    "set 0 4 {f2} {f3} {d} 1 {t}\n",
+    "set 0 5 {f3} {f1} {d} 1 {t}\n",
     "set 5 6\n",
     "hwstart\n",
     "\"\"\"\n",
@@ -1097,16 +1097,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ok\\n'"
+       "26"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,12 +1115,12 @@
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 4: Amplitude Sweep, Single Step Freq, Phase\"')\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
-    "send('reset')"
+    "# send('reset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
     }
    ],
    "source": [
-    "f2 = 130 * MHZ\n",
+    "f2 = 150 * MHZ\n",
     "\n",
     "d = 0.001\n",
     "t = 2000\n",
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
     "\n",
     "# set Chan Addr Start Stop Delta Rate Amp Phase Time\n",
     "\n",
-    "### changing the steps  in amplitudedoesn't seem to do anything?\n",
+    "### changing the steps  in amplitud doesn't seem to do anything?\n",
     "# send(\n",
     "# f\"\"\"abort\n",
     "# mode 5 1\n",
@@ -1276,7 +1276,7 @@
     "# \"\"\"\n",
     "# )\n",
     "\n",
-    "### swap channels 0 and 1 instructions??? -- seemingly no change, also doesn't work\n",
+    "### trying swap channels 0 and 1 instructions??? -- seemingly no change\n",
     "send(\n",
     "f\"\"\"abort\n",
     "mode 5 1\n",
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "'ok\\n'"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,12 +1354,12 @@
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 6: Phase Sweep, Single Step Amp, Freq\"')\n",
     "my_instrument.write(':TIMebase:DELay 60.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
-    "send('reset')"
+    "# send('reset')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,10 +1370,7 @@
     "d = 0.2\n",
     "t = 2000\n",
     "\n",
-    "# ## freq constant\n",
-    "# #########################\n",
-    "# ## \"Nice\" angle testing ##\n",
-    "# #########################\n",
+    "# ## freq constant?\n",
     "# # set Channel Address Start Stop Delta Rate Amp Freq Time\n",
     "\n",
     "send(\n",
@@ -1405,39 +1402,6 @@
     "\"\"\"\n",
     ")\n",
     "\n",
-    "# # #########################\n",
-    "# # ## Weird angle testing ##\n",
-    "# # #########################\n",
-    "# # send(\n",
-    "# # f\"\"\"abort\n",
-    "# # mode 6 1\n",
-    "# # setchannels 2\n",
-    "# # set 0 0 0 35 {d} 1 0.75 {f125} {t * 2}\n",
-    "# # set 0 1 35 100 {d} 1 0.80 {f125} {t * 2}\n",
-    "# # set 0 2 100 200 {d} 1 0.90 {f125} {t * 2}\n",
-    "# # set 0 3 200 360 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 4 360 270 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 5 270 180 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 6 180 270 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 7 270 100 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 8 100 35 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 0 9 35 0 {d} 1 1.00 {f125} {t * 10}\n",
-    "# # set 1 0 0 0 90 {d} 1 0.75 {f125} {t * 2}\n",
-    "# # set 1 1 1 90 180 {d} 1 0.80 {f125} {t * 2}\n",
-    "# # set 1 2 2 180 270 {d} 1 0.90 {f125} {t * 2}\n",
-    "# # set 1 3 3 270 360 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 4 4 360 270 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 5 5 270 180 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 6 6 180 270 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 7 7 270 180 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 8 8 180 90 {d} 1 1.00 {f125} {t * 2}\n",
-    "# # set 1 9 9 90 0 {d} 1 1.00 {f125} {t * 10}\n",
-    "# # set 4 10\n",
-    "# # start\n",
-    "# # \"\"\"\n",
-    "# # )\n",
-    "# # assert send('numtriggers') == '10\\n'\n",
-    "\n",
     "\n",
     "#### simple test -- still can't seem to get amplitude working\n",
     "## set chan addr phase_start phase_stop delta rate amp freq (time)\n",
@@ -1457,16 +1421,14 @@
     "# \"\"\"\n",
     "# )\n",
     "\n",
-    "\n",
     "# print('Success')\n",
-    "SAVE_IMAGES = True\n",
     "if SAVE_IMAGES == True:\n",
     "    my_instrument.save_screenshot('mode6-phasesweep-plus-test.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1437,7 @@
        "45"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,13 +1445,6 @@
    "source": [
     "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing finished\"')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
